Fix link in event.html

--- a/event.html
+++ b/event.html
@@ -26,6 +26,6 @@
         <br>
         <p>What? Devon's stream is broken?</p>
         <br>
-        <p>Better fix it then: https://puzzel.org/en/jigsaw/play?p=-MkZ_l5jjIY80j3XKtJX</p>
+        <p>Better fix it then: <a href="https://puzzel.org/en/jigsaw/play?p=-MkZ_l5jjIY80j3XKtJX">https://puzzel.org/en/jigsaw/play?p=-MkZ_l5jjIY80j3XKtJX</a></p>
     </body>
 </html>
